# ska-te-dish-structure-simulator

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .release  CHANGELOG  CODEOWNERS  LICENSE  Makefile  README.md  manifests.yaml  pod-dev-ds-sim-6994c5-rbchh.yaml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
charts/ds-sim/: Chart.yaml  values.yaml
charts/ds-sim/templates/: deployment.yaml
charts/ds-sim/templates/tests/: test-connection.yaml
charts/ska-te-dish-structure-simulator/: Chart.yaml  values.yaml
charts/ska-te-dish-structure-simulator/templates/: _helpers.tpl  deployment.yaml  ds-sim-web.yaml  persistance.yaml
charts/ska-te-dish-structure-simulator/templates/tests/: test-connection.yaml
charts/ska-te-dish-structure-simulator/test-parent/: Chart.yaml  values.yaml
image/: Dockerfile  config.tar
images/ska-te-dish-structure-files/: Dockerfile  SimulationServer-ds-sim-License-Request.txt  copy.sh
images/ska-te-dish-structure-simulator/: Dockerfile  SimulationServer-ds-sim-License-Request.txt  getip.sh  uaexpert.sh
images/ska-te-dish-structure-simulator-test/: Dockerfile
images/ska-te-ds-web-sim/: Dockerfile  buildme.sh  runme.sh
images/ska-te-ds-web-sim/simulator/: Dockerfile  build.sh  legacy.tar  remove.sh  run.sh
images/ska-te-ds-web-sim/simulator/config/: application.yml  logback-spring.xml  nodeInitValue.json
tests/: test_ds_sim.py
tests/integration/: __init__.py  conftest.py  test_ds_sim_connection.py
tests/integration/features/: ds_sim_connection.feature
