[tool.poetry]
name = "ska-te-dish-structure-simulator-tests"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.0"
assertpy = "^1.1"
asyncua = "^1.0.2"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
