[tool.poetry]
name = "ska-te-dish-structure-simulator-tests"
version = "0.6.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tests"}]

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.10.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
asyncua = "^1.0.5"
pytest-asyncio = "^0.21.0"
kubernetes = "^28.1.0"
pytest-json-report = "^1.5.0"
pytest-cov = "^4.1.0"
pytest-bdd = "^7.0.0"
isort = "^5.12.0"
ska-ser-logging = "^0.4.1+0a677a67"
flake8 = "^6.1.0"
pylint = "^3.0.2"
pylint-junit = "^0.3.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
